Implemented solution with Express, Typescript, Swagger and Prisma.
