# public/swagger.json
@@ -6,6 +6,61 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"CartItemModel": {
+				"properties": {
+					"productId": {
+						"type": "number",
+						"format": "double"
+					},
+					"count": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"productId",
+					"count"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CartModel": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"userId": {
+						"type": "number",
+						"format": "double"
+					},
+					"isDeleted": {
+						"type": "boolean"
+					},
+					"items": {
+						"$ref": "#/components/schemas/CartItemModel"
+					}
+				},
+				"required": [
+					"id",
+					"userId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"BatchPayload": {
+				"properties": {
+					"count": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"count"
+				],
+				"type": "object",
+				"description": "Batch Payload for updateMany & deleteMany & createMany"
+			},
 			"ProductEntity": {
 				"properties": {
 					"id": {
@@ -33,9 +88,6 @@
 			},
 			"CartItemEntity": {
 				"properties": {
-					"productId": {
-						"type": "string"
-					},
 					"product": {
 						"$ref": "#/components/schemas/ProductEntity"
 					},
@@ -47,33 +99,6 @@
 				"required": [
 					"product",
 					"count"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"CartEntity": {
-				"properties": {
-					"id": {
-						"type": "string"
-					},
-					"userId": {
-						"type": "string"
-					},
-					"isDeleted": {
-						"type": "boolean"
-					},
-					"items": {
-						"items": {
-							"$ref": "#/components/schemas/CartItemEntity"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"id",
-					"userId",
-					"isDeleted",
-					"items"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -164,6 +189,32 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"ProductModel": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"title": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"price": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"id",
+					"title",
+					"description",
+					"price"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -200,7 +251,10 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/CartEntity"
+									"items": {
+										"$ref": "#/components/schemas/CartModel"
+									},
+									"type": "array"
 								}
 							}
 						}
@@ -228,8 +282,45 @@
 			"delete": {
 				"operationId": "DeleteCart",
 				"responses": {
-					"204": {
-						"description": "No content"
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"deletedCartItems": {
+											"$ref": "#/components/schemas/BatchPayload"
+										},
+										"deletedCart": {
+											"properties": {
+												"isDeleted": {
+													"type": "boolean"
+												},
+												"userId": {
+													"type": "number",
+													"format": "double"
+												},
+												"id": {
+													"type": "number",
+													"format": "double"
+												}
+											},
+											"required": [
+												"isDeleted",
+												"userId",
+												"id"
+											],
+											"type": "object"
+										}
+									},
+									"required": [
+										"deletedCartItems",
+										"deletedCart"
+									],
+									"type": "object"
+								}
+							}
+						}
 					}
 				},
 				"tags": [
@@ -271,7 +362,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/ProductEntity"
+										"$ref": "#/components/schemas/ProductModel"
 									},
 									"type": "array"
 								}
@@ -295,7 +386,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ProductEntity"
+									"$ref": "#/components/schemas/ProductModel"
 								}
 							}
 						}
@@ -311,7 +402,8 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"type": "string"
+							"format": "double",
+							"type": "number"
 						}
 					}
 				]
