# src/controllers/products.ts
@@ -1,6 +1,6 @@
 import { Get, Query, Route, Tags } from "tsoa";
 import { AppService } from "../services/app.service";
-import { ProductEntity } from "../schemas/product.entity";
+import { ProductModel } from "../schemas/product.entity";
 
 @Route("api/products")
 @Tags('product')
@@ -8,12 +8,12 @@ export default class ProductsController {
     appService: AppService = new AppService();
 
     @Get("/")
-    public async getProducts(): Promise<ProductEntity[]> {
+    public async getProducts(): Promise<ProductModel[]> {
         return this.appService.getProducts();
     }
 
     @Get("/{productId}")
-    public async getProductById(@Query() id: string): Promise<ProductEntity> {
+    public async getProductById(@Query() id: number): Promise<ProductModel> {
         return this.appService.getProductById(id);
     }
 }
