# src/schemas/product.entity.ts
@@ -1,6 +1,13 @@
 export interface ProductEntity {
-    id: string;
-    title: string;
-    description: string;
-    price: number;
-  }
+  id: string;
+  title: string;
+  description: string;
+  price: number;
+}
+
+export interface ProductModel {
+  id: number;
+  title: string;
+  description: string;
+  price: number;
+}
