# src/services/app.service.ts
@@ -1,124 +1,165 @@
-import { ProductEntity } from '../schemas/product.entity';
-import { CartEntity, CartItemEntity } from '../schemas/cart.entity';
-import { OrderEntity } from '../schemas/order.entity';
+import { ProductModel } from '../schemas/product.entity';
+import { CartModel } from '../schemas/cart.entity';
 import { RepositoryService } from '../repository/store.repository';
-import { catalogMock } from '..//mocks/catalog.mock';
-import { userMock } from '..//mocks/user.mock';
-import { UserEntity } from '../schemas/user.entity';
-import { v4 as uuidv4 } from 'uuid';
+import { PrismaClient } from '@prisma/client';
 
 export class AppService {
-    private repository: RepositoryService = new RepositoryService();
+    repository: RepositoryService;
+    prisma: PrismaClient;
 
-    getProducts(): ProductEntity[] {
-        return catalogMock;
+    constructor() {
+        this.prisma = new PrismaClient();
+        this.repository = new RepositoryService();
     }
 
-    getProductById(id: string): ProductEntity {
-        return catalogMock.filter(cat => cat.id === id)[0];
-    }
+    async getProducts(): Promise<ProductModel[]> {
+        try {
+            const products = await this.prisma.product.findMany();
+            return products;
 
-    getCart(): CartEntity {
-        return this.repository.cartStored;
-    }
-
-    getOrder(): OrderEntity {
-        const cart = this.repository.cartStored;
-        const user: UserEntity = userMock;
-
-        let order: OrderEntity;
-
-        if (cart !== null && cart.items.length > 0) {
-            order = this.checkout(user, cart);
-        } else {
-            throw { status: 400, message: 'There are no items to generate the order' };
+        } catch (error) {
+            throw { status: 400, message: 'An error has happened while getting the products.' };
         }
-
-        return order;
     }
 
-    createItemCart(cart: CartEntity) {
-        if (cart.items[0].productId) {
-            const cartId = this.validateCartId(cart, userMock);
+    async getProductById(productId: number): Promise<ProductModel> {
+        try {
+            const product = await this.prisma.product.findUnique({
+                where: {
+                    id: productId,
+                }
+            });
 
-            const newItem = cart.items.map((item) => ({
-                count: item.count,
-                product: catalogMock.filter((catalog) => catalog.id === cart.items[0].productId)[0],
-            }));
+            return product!;
+        } catch (error) {
+            throw { status: 400, message: 'An error has happened while getting the product.' };
+        }
+    }
 
-            this.repository.cartStored = {
-                id: cartId,
-                userId: userMock.id,
-                isDeleted: false,
-                items: this.repository.cartStored?.items ? this.repository.cartStored?.items.concat(newItem) : newItem,
+    async getCart(): Promise<CartModel[]> {
+        try {
+            const products = await this.prisma.cart.findMany();
+            return products;
+        } catch (error) {
+            throw { status: 400, message: 'An error has happened while getting the cart.' };
+        }
+    }
+
+    async createItemCart(cart: CartModel) {
+        let createCart: CartModel;
+        let createItems: any;
+
+        try {
+            const findCart = await this.prisma.cart.findUnique({
+                where: {
+                    id: cart.userId,
+                },
+            });
+
+            // Check if a cart already exist if not, let's create a cart entry.
+            if (!findCart) {
+                createCart = await this.prisma.cart.create({
+                    data: {
+                        userId: cart.userId,
+                        isDeleted: cart.isDeleted!,
+                    },
+                });
+            }
+
+            // Assign Cart Id
+            const cartId = findCart?.id ? findCart.id : createCart!.id;
+
+            // If cart exist and there are items to add, let's create the items entry
+            if (cartId && cart.items && cart.items) {
+                createItems = await this.prisma.cartItem.create({
+                    data: {
+                        count: cart.items.count,
+                        cartId: cartId,
+                        productId: cart.items.productId,
+                    },
+                });
+
+                return createItems;
+            }
+        } catch (error) {
+            throw { status: 400, message: 'Item could not be added to the cart' };
+        }
+    }
+
+    async updateCart(itemId: number, count: number) {
+        try {
+            const updateQuantity = await this.prisma.cartItem.update({
+                where: {
+                    id: +itemId,
+                },
+                data: {
+                    count: +count,
+                },
+            });
+            console.log(updateQuantity);
+            return updateQuantity;
+
+        } catch (error) {
+            throw { status: 400, message: 'Item could not be updated' };
+        }
+    }
+
+    async deleteCart(cartId: number) {
+        try {
+            // 1st. Delete any reference to the cartId in the 'CartItem' table.
+            const deleteCartItems = await this.prisma.cartItem.deleteMany({
+                where: {
+                    cartId: {
+                        equals: cartId,
+                    },
+                },
+            });
+
+            // 2nd. Delete any reference to the cartId in the 'Cart' table.
+            const deleteCart = await this.prisma.cart.delete({
+                where: {
+                    id: cartId,
+                },
+            });
+
+            return {
+                deletedCart: deleteCart,
+                deletedCartItems: deleteCartItems,
             };
-        } else {
-            throw { status: 400, message: 'Item does not exist in catalog' };
+
+        } catch (error) {
+            throw { status: 400, message: 'Item could not be deleted' };
         }
     }
 
-    fetchItems(): CartItemEntity[] {
-        return this.repository.cartStored.items;
-    }
+    async checkout(userId: number): Promise<any> {
+        try {
+            const result = await this.prisma.$queryRaw`SELECT
+          (SELECT USR.NAME
+            FROM PUBLIC."User" USR
+            WHERE USR."id" = 1) AS NAME,
+        
+          (SELECT PDT.TITLE
+            FROM PUBLIC."Product" PDT
+            WHERE PDT.ID = ITM."productId") AS TITLE,
+        
+          (SELECT PDT.DESCRIPTION
+            FROM PUBLIC."Product" PDT
+            WHERE PDT.ID = ITM."productId") AS PRODUCT,
+        
+          (SELECT PDT.PRICE
+            FROM PUBLIC."Product" PDT
+            WHERE PDT.ID = ITM."productId") AS PRICE,
+          ITM.COUNT
+          FROM PUBLIC."Cart" CRT
+          LEFT JOIN PUBLIC."CartItem" ITM ON (CRT.ID = ITM."cartId")
+          WHERE CRT."userId" = ${+userId}`;
 
-    updateCart(itemId: string, count: number) {
-        if (this.repository.cartStored?.items) {
-            const updated = this.repository.cartStored.items.map((item) => ({
-                ...item,
-                count: itemId === item.productId ? count : item.count,
-            }));
+            return result;
 
-            this.repository.cartStored.items = updated;
+        } catch (error) {
+            throw { status: 400, message: 'An error has happened while checking out the order.' };
         }
     }
 
-    deleteCart(cartId: string) {
-        if (this.repository.cartStored) {
-            if (this.repository.cartStored.id === cartId) {
-                this.repository.cartStored.isDeleted = true;
-            } else {
-                throw { status: 400, message: 'There is no cart to remove' };
-            }
-        }
-    }
-
-    checkout(user: UserEntity, cartItems: CartEntity): OrderEntity {
-        return {
-            id: uuidv4(),
-            userId: user.id,
-            cartId: '4e2752c3-00c0-4647-8caf-f27c4e9bbd61',
-            items: cartItems.items,
-            payment: {
-                type: 'Credit Card',
-                address: 'Los Angeles 1225',
-                creditCard: '000000000000',
-            },
-            delivery: {
-                type: 'Post',
-                address: 'Los Angeles 1225',
-            },
-            comments: '',
-            status: 'created',
-            total: cartItems.items.reduce((previousVal, currentVal) => {
-                return previousVal + currentVal.product.price * currentVal.count;
-            }, 0),
-        };
-    }
-
-    validateCartId(cart: CartEntity, user: UserEntity): any {
-        let cartId = null;
-
-        if (cart.id) {
-            // If exists, validate if the cartId for the current user.
-            if (cart.userId === user.id) {
-                cartId = cart.id;
-            } else {
-                throw { status: 400, message: 'User Id do not match' };
-            }
-        } else {
-            // If it does not exist, a new one is generated.
-            cartId = uuidv4();
-        }
-        return cartId;
-    }
 }
